# scrapedatshi-mcp

./: README.md  pyproject.toml
scrapedatshi_mcp/: server.py
